# MSE-UnixForensics

./: CMakeLists.txt  IOHandler.cpp  IOHandler.h  Makefile  README  dtraceHandler.cpp  dtraceHandler.h  main.cpp  straceHandler.cpp  straceHandler.h
conf/: groupInfo.txt
tests/: BasicForkTest.cpp  HelloWorldTest.cpp  ReadFileTest.cpp
